--- a/src/Bookshop/BookshopBundle/Resources/views/layout.html.twig
+++ b/src/Bookshop/BookshopBundle/Resources/views/layout.html.twig
@@ -1,6 +1,6 @@
 {% extends '::base.html.twig' %}
 
-{% block sidebar %}
-
-
+{% block body%}
+    {% block fos_user_content %}
+    {% endblock %}
 {% endblock %}
