--- a/src/Bookshop/BookshopBundle/Resources/views/Default/homepage.html.twig
+++ b/src/Bookshop/BookshopBundle/Resources/views/Default/homepage.html.twig
@@ -1,4 +1,12 @@
 {% extends "BookshopBookshopBundle::layout.html.twig"  %}
-{% block body %}
-Hello!
+{% block body %} 
+
+    {% block leftsidebar%}
+        {{ parent() }}
+    {% endblock %}
+
+    {% block rightsidebar%}
+        {{ parent() }}
+    {% endblock %}
+
 {% endblock %}
