--- a/src/Bookshop/BookshopBundle/Resources/views/Default/homepage.html.twig
+++ b/src/Bookshop/BookshopBundle/Resources/views/Default/homepage.html.twig
@@ -1,12 +1,4 @@
-{% extends "BookshopBookshopBundle::layout.html.twig"  %}
-{% block body %} 
+{% extends "BookshopBookshopBundle::layout3Cols.html.twig"  %}
+{%block content%}
 
-    {% block leftsidebar%}
-        {{ parent() }}
-    {% endblock %}
-
-    {% block rightsidebar%}
-        {{ parent() }}
-    {% endblock %}
-
-{% endblock %}
+{%endblock content%}
