--- a/src/Bookshop/BookshopBundle/Resources/views/layout3Cols.html.twig
+++ b/src/Bookshop/BookshopBundle/Resources/views/layout3Cols.html.twig
@@ -4,10 +4,7 @@
     <div class="main-container col3-layout">
         <div class="main">
             {% block body %}
-
-                {% block fos_user_content %}
-                {% endblock %}
-
+                {{parent()}}
             {% endblock body %}
         </div>
     </div>
